# oauth2.0POC

./: .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/backend/: .gitignore  package.json  pyproject.toml  seed.py
apps/backend/app/: config.py  db.py  main.py  models.py  notes_service.py  redis_client.py  schema.py
apps/backend/app/auth/: __init__.py  dependencies.py  redis_service.py  service.py
apps/backend/app/routes/: __init__.py  auth.py  notes.py
apps/frontend/: package-lock.json  package.json
apps/frontend/src/: App.jsx  index.css
apps/frontend/src/pages/: Callback.jsx  Home.css  Home.jsx  Login.css  Login.jsx  Public.css  Public.jsx
apps/frontend/src/services/: auth.js  notes.js
docs/: auth-flow.md  auth-guide.md  demo-guide.md
infra/: docker-compose.yml  setup-keycloak.sh
infra/nginx/: default.conf
